style.css
/*------------ Variables Css---------- */

:root {
  --header-height: 3rem;
  --font-weight: 600;
}
/* colors */
:root {
  --bg-color: #080808;
  --accent-color:#009966;
  --light-color: #fff;
  --dark-color: #000;
  --hover-color: #fc4cb5;
}
/* fonts */
:root {
  --body-font: 'Poppins', sans-serif;
  --big-font-size: 2rem;
  --h2-font-size: 1.25rem;
  --normal-font-siz: 1rem;
}
/* media query */

  @media screen and (min-width: 768px) {
    :root {
    --big-font-size: 3.5rem;
    --h2-font-size: 2rem;
    --normal-font-siz: 1rem;
  }
  }



/* margins */
:root {
  --mb-1: 0.5rem;
  --mb-2: 1rem;
  --mb-3: 1.5rem;
  --mb-4: 2rem;
  --mb-5: 2.5rem;
  --mb-6: 3rem;
}

/*--------- BASE ---------------*/
*,
::before,
::after {
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
}

body {
  margin: var(--header-height) 0 0 0;
  font-family: var(--body-font);
  font-size: var(--normal-font-siz);
  color: var(--dark-color);
}
h1,
h2,
p {
  margin: 0;
}
ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
a {
  text-decoration: none;
}
img {
  max-width: 100%;
  height: auto;
  display: block;
}

/*----------- CSS Classes--------- */
.section-title {
  position: relative;
  font-size: var(--h2-font-size);
  color: #660066;
  margin-top: var(--mb-2);
  margin-bottom: var(--mb-2);
  text-align: center;
}

.section-title::after {
  position: absolute;
  content: '';
  width: 65px;
  height: 0.18rem;
  left: 0;
  right: 0;
  top: 2rem;
  margin: auto;
  background-color:#fc4cb5;
}

.section {
  padding: 3rem 0 2rem 0;
}

/*---------- LAYOUT---------- */
.bd-grid {
  max-width: 100vw;
  display: grid;
  grid-template-columns: 100%;
  grid-column-gap: 2rem;
  width:calc(100% - 2rem);
  margin-right: var(--mb-3);
  margin-left: var(--mb-3);
}
.header {
  width: 100%;
  position: fixed;
  top: 0;
  z-index: 2;
  background-color: #fff;
  box-shadow: 0 4px 8px rgba(146, 161, 176, 0.15);
  margin-bottom: var(--mb-4);
}

/*--------- Navigation-------------- */
.nav {
  height: var(--header-height);
  display: flex;
  justify-content: space-around;
  font-weight: var(--font-weight);
  align-items: center;
}

@media screen and (max-width: 768px) {
  body{
    margin: 0;
    display: grid;
    place-items: center;
  }
  .header {
    margin-bottom: var(--mb-6);
  }
  .nav__menu {
    position: fixed;
    top: var(--header-height);
    right: -100%;
    width: 50%;
    height: 50%;
    padding: 2rem;
    border-radius: 50% 0 50% 50%;
    background-color: var(--bg-color);
    transition: 0.5s ease;
    text-align: center;
  }

}
.nav__item {
  margin-bottom: var(--mb-4);
}
.nav__link {
  position: relative;
  color: var(--light-color);
}
.nav__link:hover {
  position: relative;
}
.nav__link:hover::after {
  position: absolute;
  content: '';
  width: 100%;
  height: 0.2rem;
  left: 0;
  top: 2rem;
  background-color: var(--hover-color);
}
.nav__logo-link{
  font-size: 2rem;
  color: var(--accent-color);
  
}
.nav__logo-link span{
  color: #fc4cb5;
}
.nav__toggle {
  color: var(--dark-color);
  font-size: 1.5rem;
  cursor: pointer;
}

/* active menu */
.active::after {
  position: absolute;
  content: '';
  width: 100%;
  height: 0.2rem;
  left: 0;
  top: 2rem;
  background-color: var(--hover-color);
}

/* show menu */
.show {
  right: 0;
}

/*-------------Home----------*/
.home {
  row-gap: 1rem;
  position: relative;
}
 .home__data {
  align-self: center;
}

.home__title {
  font-size: var(--big-font-size);
  margin-bottom: var(--mb-2);
}
.home__title-color {
  color: var(--accent-color);
}
.home__social {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}
.home__social-icon {
  width: max-content;
  margin-bottom: var(--mb-2);
  font-size: 1.5rem;
  color: var(--dark-color);
}
.home__social-icon:hover {
  color: var(--accent-color);
}
.home__img  {
  margin-top: var(--mb-6);
  width: 250px;
  background-color: #33cc66;
  border-radius:50%;
} 
.home__img:hover{

padding: 1rem 1rem 0 1rem;
border: none;
transition: 2s ease;
}
.button {
  width: 10rem;
  display: inline-block;
  background-color: var(--accent-color);
  color: white;
  padding: 0.75rem 2.5rem;
  font-weight: var(--font-weight);
  border-radius: 0.5rem;
  margin-top:var(--mb-2);;
}
.button:hover {
  background-color: #fc4cb5;
  box-shadow: 0 10px 36px rgba(0, 0, 0, 0.15);
}
.home__content{
  display: flex;
  justify-content: space-around;
  align-items: center;
}

/*---------------ABOUT---------------*/

.about__container {
  row-gap: 2rem;
  text-align: center;
}
.about__subtitle {
  margin-bottom: var(--mb-2);
  color: var(--dark-color);
}
.about__img {
  justify-self: center;
}
.about__img img {
  width: 200px;
  border-radius: 0.5rem;
}
/*------------SKILLS---------------*/
.skills__container {
  row-gap: 2rem;
  text-align: center;
}
.skills__subtitle {
  margin-bottom: var(--mb-2);
}
.skills__data {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  justify-content: space-between;
  align-items: center;
  position: relative;
  gap: 0.5rem;
  font-weight: var(--font-weight);
}
.icon {
  font-size: 2rem;
}
.skills__name {
  margin-bottom:var(--mb-2);
  padding: 0.5rem 1rem;
  border-radius: 0.5rem;
  background-color: var(--accent-color);
  box-shadow: 0 10px 36px rgba(0, 0, 0, 0.15);
}
.skills__name:hover {
  background-color: #fc4cb5;
  color: white;
}
.skills__name span {
  font-size: var(--normal-font-siz);
}

/*------------Example Code---------------*/
.exCode__container {
  row-gap: 2rem;
  text-align: justify;
  background-color: var(--dark-color);
  color: var(--light-color);
}
.exCode__subtitle {
  margin-bottom: var(--mb-2);
  font-family: monospace;
}
.jsCode {
  line-height: 1;
  white-space: pre-wrap;
  word-break: break-all;
}
/*------------Experiance---------------*/
.experiance__container {
  row-gap: 2rem;
  text-align: center;
}
.experience__data {
  width: 100%;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  gap: 1.5rem;
  padding: 2rem;

}
.project__name{
  box-shadow: 0 4px 25px rgba(0, 0, 0, 0.15);
  border-radius: 0.5rem;
  padding: 1rem;
  background-color: var(--accent-color);
}
.project__name h4{
  background-color: #fc4cb5;
  color: var(--light-color);
  padding: 1rem;
  border-radius: 0.5rem;
  text-align: center;
  width: 50%;
  margin: 0 auto;
  margin-bottom: var(--mb-2);
}
.project__name p{
  width: 70%;
  margin: 0 auto;
  text-align: center;
  margin-bottom: var(--mb-2);
}
.project__name a{
  display: inline-block;
  color:blue;
  text-align: center;
  width: 100%;
  margin: 0 auto;
  font-weight: 800;
  cursor: pointer;
}
.project__name a:hover{
  color: var(--hover-color);
  transform: scale(1.2);
}
/*--------Education----------*/
.education li strong{
  color: var(--accent-color);
}

.education__list li{
  font-weight: 600;
}
.education__list li:hover{
 list-style: circle;
color: var(--bg-color); 
}
hr{
  width: 100%;
  border: 1px dashed black;
}
/*--------Languages----------*/
.languages{
  row-gap: 2rem;
  text-align: center;
  margin-bottom: var(--mb-6);
}

table {
  font-family: arial, sans-serif;
  border-collapse: collapse;
  width: 100%;
  background-color: #fc4cb5;
}

td, th {
  border: 1px solid #dddddd;
  text-align: left;
  padding: 8px;

}
tr:hover {
  background-color: #dddddd;
}
.languages p{
display: flex;
justify-content: center;
align-items: center;
text-align: center;
width: 80%;
}
/*--------Contacts----------*/
.contacts__list{
display: flex;
justify-content: center;
gap: 2rem;
}
.contacts__list li i{
  background-color: var(--accent-color);
  padding: 1rem;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
  border-radius: 0.5rem;
  color: white;
  border: 3px dotted #fc4cb5;
}
.contacts__list li i:hover{
  background-color: #fc4cb5;
}
/*--------Footer----------*/
.footer{
  background-color:#003366 ;
  color: var(--light-color);
  text-align: center;
  padding: 2rem 0;
}
.footer__social{
display: flex;
justify-content: center;
align-items: center;
gap: 2rem;
margin-bottom: var(--mb-3);
}
.footer__social i,.footer__social img{
  color: var(--dark-color);
  background-color: var(--light-color);
  padding:0.5rem;
  border-radius: 10%;
  object-fit: cover;
  border: 5px solid var(--accent-color);
}

.footer span{
  font-weight: var(--font-weight);
  color: red;
}
.footer__social i:hover,.footer__social img:hover{
background-color: #fc4cb5;
 }

/*--------MEDIA QUERIES----------*/

@media screen and (min-width: 768px) {
  body{
    margin: 0;
    display: grid;
    place-items: center;
  }
  section{
    padding-top: 4rem;
    padding-bottom: 4rem;
  }
  .section-title{
    margin-bottom:var(--mb-6)
  }
  .section-title::after{
    width: 80px;
    top: 3rem;
  }
  .nav{
    height: calc(var(--header-height) + 1rem);
  }
  .nav__item{
    margin-left: var(--mb-6);
    margin-bottom: 0;
  }
  .nav__list{
    display: flex;
    padding-top: 0;
  }
  .nav__link{
    color: var(--dark-color);
  }
  .nav__toggle{
    display: none;
  }
  .nav__logo-link {
    color:var(--accent-color);
    font-size: var(--h2-font-size);

  }
  .home{
    height: 100vh;
  }
  .home__data{
    align-items: flex-end;
  }
  .home__img{
    width: 457px;
  }
  .about__container{
    grid-template-columns: repeat(2,1fr);
    align-items: center;
    text-align: initial;
  }
  .about__img img{
    width: 300px;
  }
}
/* @media screen and (min-width: 1024px){
  .bd-grid{
    margin-left: auto;
    margin-right: auto;
  }
} */

